<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/designlogin2"
    tools:context=".CadastroActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arimo"
        android:text="@string/text_cadastre_se"
        android:textColor="#0C6291"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/nome"
        android:inputType="text|textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent=".8"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_account_circle"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/campo_email"
        android:inputType="text|textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome"
        app:layout_constraintWidth_percent=".8"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/senha"
        android:inputType="number|numberPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintWidth_percent=".8"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/senhaa"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/confirmar_senha"
        android:inputType="number|numberPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="cadastrar"
        android:padding="15dp"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaa"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".4"
        tools:ignore="UsingOnClickInXml" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:text="@string/j_possui_uma_conta"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/senhaa"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/senhaa"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:onClick="entrar"
        android:text="@string/entrar_cadastro"
        android:textColor="#0A0A80"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UsingOnClickInXml" />



</androidx.constraintlayout.widget.ConstraintLayout>